--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@parcel/compressor-gzip": "2.8.2",
     "@parcel/packager-raw-url": "2.8.2",
     "@parcel/transformer-webmanifest": "2.8.2",
+    "@playwright/test": "1.29.1",
     "@types/bn.js": "5.1.1",
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "5.48.0",
