--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier -w ./src",
     "format:check": "prettier -c ./src",
     "lint": "eslint ./src --fix",
-    "lint:check": "eslint ./src"
+    "lint:check": "eslint ./src",
+    "zombienet": "zombienet --provider native spawn ./tests/small-network.toml"
   },
   "app": "dist/index.html",
   "targets": {
@@ -45,6 +46,8 @@
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "@zombienet/cli": "^1.3.23",
+    "@zombienet/utils": "^0.0.12",
     "buffer": "5.5.0",
     "eslint": "8.31.0",
     "eslint-config-prettier": "8.6.0",
